--- a/_sass/iwfcv/_footer.scss
+++ b/_sass/iwfcv/_footer.scss
@@ -2,7 +2,7 @@ footer {
   width: 100%;
   max-width: 720px;
   margin: auto;
-  padding: 0 1.5em;
+  /* padding: 0 1.5em; */
   .content {
     text-align: center;
     font-size: .9em;
